--- a/Lesson 2/app/src/main/res/layout/activity_main.xml
+++ b/Lesson 2/app/src/main/res/layout/activity_main.xml
@@ -40,16 +40,40 @@
         android:layout_marginTop="8dp"
         android:text="Search URL will show up here when you click search" />
 
-    <ScrollView
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp" >
+        android:layout_height="match_parent">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp" >
+
+            <TextView
+                android:id="@+id/tv_github_search_results_json"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="Start Search" />
+
+        </ScrollView>
 
         <TextView
-            android:id="@+id/tv_github_search_results_json"
+            android:id="@+id/tv_error_message_display"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="Start Search" />
-    </ScrollView>
+            android:textSize="22sp"
+            android:padding="16dp"
+            android:text="@string/error"
+            android:visibility="invisible" />
+
+        <ProgressBar
+            android:id="@+id/pb_loading_indicator"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:layout_gravity="center"
+            android:visibility="invisible" />
+
+    </FrameLayout>
+
 </LinearLayout>
