--- a/Sunshine/app/src/main/res/layout/activity_forecast.xml
+++ b/Sunshine/app/src/main/res/layout/activity_forecast.xml
@@ -32,4 +32,18 @@
 
     </ScrollView>
 
+    <TextView
+        android:id="@+id/tv_error"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/error"
+        android:visibility="invisible" />
+
+    <ProgressBar
+        android:id="@+id/pb_loader"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
+
 </FrameLayout>
