--- a/Sunshine/app/src/main/res/layout/activity_forecast.xml
+++ b/Sunshine/app/src/main/res/layout/activity_forecast.xml
@@ -36,6 +36,8 @@
         android:id="@+id/tv_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:textSize="20sp"
         android:text="@string/error"
         android:visibility="invisible" />
 
