--- a/Sunshine/app/src/main/res/layout/activity_forecast.xml
+++ b/Sunshine/app/src/main/res/layout/activity_forecast.xml
@@ -33,16 +33,16 @@
     </ScrollView>
 
     <TextView
-        android:id="@+id/tv_error"
+        android:id="@+id/tv_error_message_display"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:textSize="20sp"
-        android:text="@string/error"
+        android:text="@string/error_message"
         android:visibility="invisible" />
 
     <ProgressBar
-        android:id="@+id/pb_loader"
+        android:id="@+id/pb_loading_indicator"
         android:layout_width="42dp"
         android:layout_height="42dp"
         android:layout_gravity="center"
