--- a/Sunshine/app/src/main/res/layout/forecast_list_item.xml
+++ b/Sunshine/app/src/main/res/layout/forecast_list_item.xml
@@ -6,6 +6,7 @@
 
     <TextView
         android:id="@+id/tv_weather_data"
+        style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="22sp"
