--- a/Sunshine/app/src/main/res/menu/forecast.xml
+++ b/Sunshine/app/src/main/res/menu/forecast.xml
@@ -6,7 +6,11 @@
         android:id="@+id/action_refresh"
         android:orderInCategory="1"
         app:showAsAction="ifRoom"
-        android:title="@string/action_refresh">
-    </item>
+        android:title="@string/action_refresh" />
+
+    <item
+        android:id="@+id/action_map"
+        android:title="@string/action_map"
+        app:showAsAction="never" />
 
 </menu>
